# check-solr

./: ChangeLog.md  README.md  check_solr.cabal
plugins/: check_solr_query.hs  check_solr_stats.hs
src/CheckSolr/: Query.hs  Stats.hs  Thresholds.hs
src/CheckSolr/Solr/: MBeans.hs  ResponseHeader.hs  Select.hs
